# cpp-bencoding

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Decoder.h
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/packaging/: README.md
tests/packaging/find_package/: CMakeLists.txt
